fixing margin for first section on mobile device

--- a/styles/comps/carousel.scss
+++ b/styles/comps/carousel.scss
@@ -860,6 +860,7 @@ $carouselBackgroundColor: #ffeded;
   }
 
   @media (min-width: 576px) {
+    max-width: 1224px !important;
     height: 270px !important;
   }
 }
